syntax = "proto3";

package products;

import "products.proto";

service AuditLogService {
  rpc Subscribe (SubscribeRequest) returns (stream Event) {}
}

enum Action {
  UNKNOWN = 0;
  CREATED = 1;
  DELETED = 2;
}

message Event {
  string id = 1;
  Action action = 2;
  string product_id = 3;
  Product product = 4;
}

message SubscribeRequest {}

